Date: 2020-11-10 Version: 6.4.3

Improved Support Email Messages with Email Button
Updated a number of deprecated social media links

Please don't look away FinalCrypt needs your help
Please help by sharing FinalCrypt on Social Media

Date: 2020-11-02 Version: 6.4.2

Improved support added to Graphical User Interface
Improved default browser-page opening launch speed

Date: 2020-10-22 Version: 6.3.11

Some minor Command-Line User-Interface improvements
Fixed errors on non interactive --test option usage
Fixed Command-Line User-Interface  print formatting
Added Version Upgrade and Update dates to this info

Date: 2020-07-14 Version: 6.3.10

Improved displaying "Check Update" (startup) status
This improves user expectation on all check updates

Date: 2020-07-07 Version: 6.3.9

Added 3 Sec HTTP Timeout to speedup HTTP(S) connect
This also improves all other HTTP Connect Responses
General, Support, Update, Download or Share Webpage
This fixes FinalCrypt's unresponsiveness at startup
when the webservers of the hosting are unresponsive

Date: 2020-06-20 Version: 6.3.8

Added new backup mirror to support & check updates
Improved open "Download Software" pages on updates

Date: 2020-05-20 Version: 6.3.7

Added option print missing keys to the Command Line
Synced backup website links with check update links

Date: 2020-03-21 Version: 6.3.6

Incorporate FinalCrypt's new website about page link

Date: 2020-02-23 Version: 6.3.5

FinalCrypt got its final Icon for Windows, Mac & Linux
A heavy duty metal padlock with embossed characters FC

Updating FinalCrypt users please take some extra steps
Windows: remove & add icon from task-bar to renew icon
Mac OSX: remove & add icon from the dock to renew icon
Linux:   Logoff/on desktop session again to renew icon

Date: 2020-02-22 Version: 6.3.4

Finally added a proper icon for Windows, Mac and Linux

Date: 2020-02-18 Version: 6.3.3

Fixed browser opening platform unsupported error log