@@ -130,7 +130,7 @@ jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
 keep.javafx.runtime.on.classpath=true
-main.class=rdj.GUIFX
+main.class=rdj.GUIFXPreloader
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
