@@ -18,6 +18,7 @@
 [] = {} ----------------------------------------------------------------
 [Update Notes] =	{Update 3 (2020-11-10)}
 [Update Notes] =	{}
+[Update Notes] =	{Added new splash window during FinalCrypt startup}
 [Update Notes] =	{Improved Support Email Messages with Email Button}
 [Update Notes] =	{Updated a number of deprecated social media links}
 [Update Notes] =	{}
